2007-05-31  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Clean up the section on the 'bind' command.

	* src/mouse.c: Update the dump of current hotkeys so that it doesn't
	claim to apply only to x11.

2007-05-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, Gnuplot always bailed to
	command line after "pause mouse".
	Print the message of "pause <message>" into the gnuplot terminal
	unless for "pause -1 <message>" (message box).

2007-05-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/makefile.all: Added tabulate.$(O).

2007-05-25  Ethan Merritt  <merritt@u.washington.edu>

	* term/latex.trm: Add an explicit size option; clarify documentation.
	set terminal {latex | emtex} {default | {courier|roman} {<fontsize>}}
		     {size <XX>{unit}, <YY>{unit}}
	This brings the latex terminal into line with other terminals in 4.2

2007-05-23  Ethan Merritt  <merritt@u.washington.edu>

	* Make a concession to non-compliant svg viewers and clean up the scope
	of tspan elements.  Many current generation svg viewers do not implement
	"em" space units.  To coddle these, we back off to approximating
	1 em == 1.1 * fontsize in points.

2007-05-23  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Add/rewrite a few debugging messages.
	(wxt_atexit, wxt_cleanup): Simplify "persist" and exit code.

2007-05-23  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Give font sizes explicitly in pt units.

	* term/svg.trm: Subscript/superscripts position must be done using
	relative offsets, not absolute offset. Otherwise it prematurely 
	terminates the scope of the surrounding "chunk" of text.

2007-05-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, "pause -1" does not work
	if it is the 1st command in a script. Bug #1713350.

2007-05-22  Matthias Habl  <mhabl@users.sourceforge.net>
